--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
 - curl -o- -L https://yarnpkg.com/install.sh | bash
 - source ~/.bashrc
 - npm install -g xvfb-maybe
-- yarn
+- npm install 
 script:
 - npm run release
 branches:
